--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -32,9 +32,29 @@ TODO DATE
 - Results
 
 - Conclusion
-</script></section><section  data-markdown><script type="text/template">
-# Setting
 </script></section><section ><section data-markdown><script type="text/template">
+# Setting
+
+- Two scenarios
+</script></section><section data-markdown><script type="text/template">
+## Land-based electrolysers
+
+<img width="80%" 
+     src="images/onshore.svg" />
+
+<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
+<!--- ![Schema](images/onshore.svg) --->
+</script></section><section data-markdown><script type="text/template">
+## Everything offshore
+
+<img width="80%" 
+     src="images/offshore.svg" />
+
+<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
+<!--- ![Schema](images/offshore.svg) --->
+</script></section><section data-markdown><script type="text/template">
+TODO
+</script></section></section><section ><section data-markdown><script type="text/template">
 # Results
 
 TODO
