[Assets] Move over missing images

--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -23,7 +23,11 @@ on the Dutch North Sea
 
 Niels Wouda
 
-TODO DATE
+01-02-2021
+
+<br>
+
+<small>(feel free to ask questions during the presentation)</small>
 </script></section><section  data-markdown><script type="text/template">
 # This presentation
 
@@ -35,74 +39,127 @@ TODO DATE
 
 <aside class="notes"><p>TODO</p>
 </aside></script></section><section ><section data-markdown><script type="text/template">
-# Setting
+# Problem setting
+</script></section><section data-markdown><script type="text/template">
+## Setting
 
-- Hydrogen production from (offshore) wind electricity
+- Hydrogen production from offshore wind electricity
 
 - Electrolysis: $\ce{2H2O + electricity -> 2H2 + O2}$ 
 
-- My thesis:
-
-  - Where do we place wind parks?
-  
-  - Where do we place electrolysers?
+- Wind intermittency (randomness)
 
 <aside class="notes"><p>TODO</p>
 </aside></script></section><section data-markdown><script type="text/template">
-# Setting
-
-- Two scenarios
-  - Land
-  - Offshore
+# Research questions
+  
+- Where do we place electrolysers?
+    - On land, or
+    - Offshore, on artificial islands or re-used gas platforms?
+- What about robust solutions?  
+- What about parameter sensitivity?
 
 <aside class="notes"><p>TODO</p>
+<p>Robust wrt wind randomness</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Land-based electrolysers
 
 <img width="80%" 
      src="images/onshore.svg" />
-
-<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
+     
 <!--- ![Schema](images/onshore.svg) --->
 
 <aside class="notes"><p>TODO</p>
 </aside></script></section><section data-markdown><script type="text/template">
-## Everything offshore
+## Offshore electrolysers
 
 <img width="80%" 
      src="images/offshore.svg" />
-
-<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
+     
 <!--- ![Schema](images/offshore.svg) --->
 
 <aside class="notes"><p>TODO</p>
-</aside></script></section><section data-markdown><script type="text/template">
-TODO:
-
-- Wind intermittency
-
-- Stoch prog?
-</script></section></section><section ><section data-markdown><script type="text/template">
+</aside></script></section></section><section ><section data-markdown><script type="text/template">
 # Results
 
-TODO
-</script></section><section data-markdown><script type="text/template">
-## Scenarios
+- LCoH$_2$: levelised cost of hydrogen (€/kg)
 
-TODO
-</script></section><section data-markdown><script type="text/template">
-## Stochastic solution
+<aside class="notes"><p>Remember LCoH$<em>2$ as the _production cost</em> of a kilogram of hydrogen.
+This is similar to how electricity is priced when constructing new power plants
+or energy systems: as the levelised cost of electricity (LCoE).</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Deterministic solution
 
-TODO comparison/imports?
-</script></section><section data-markdown><script type="text/template">
+<img width="120%" src="images/lcoh2.svg" />
+<!--- ![Schema](images/lcoh2.svg) --->
+
+Compare:
+ - Dutch electricity use is about 110TWh/y
+ - Total Dutch energy use is about 650TWh/y
+
+<aside class="notes"><p>TODO</p>
+</aside></script></section><section data-markdown><script type="text/template">
+# Recourse solution
+
+<img width="45%" src="images/stoch_lcoh2.svg" />
+<img width="45.3%" src="images/stoch_imports.svg" />
+
+<!--- ![Schema](images/stoch_lcoh2.svg) --->
+<!--- ![Schema](images/stoch_imports.svg) --->
+
+($\lambda$: the LCoH$_2$ of stored/imported hydrogen)
+
+<aside class="notes"><p>TODO</p>
+</aside></script></section><section data-markdown><script type="text/template">
+# Robustness
+
+<img src="images/10gw_reliability.svg" />
+<!--- ![Schema](images/10gw_reliability.svg) --->
+
+- Service level as a function of $\delta \ge 0$
+
+- Robust solutions are rather cheap!
+
+<aside class="notes"><p>This is usually achieved via a (joint) chance constraint in the model formulation.
+That did not solve, so instead we built a little overcapacity using the regular,
+deterministic formulation. That is very effective in practice.</p>
+<p>Given a demand target $d$, we plant $(1 + \delta) d$ instead, for some overcapacity
+parameter $\delta \ge 0$.</p>
+<p>(this figure based on 10GW/88TWh annually)</p>
+<p>Observations:</p>
+<ul>
+<li>At $\delta=0$% (no overcapacity), the solutions generally have a 50/50 chance of producing
+sufficient hydrogen in a year.</li>
+<li>That scales <em>rapidly</em> as we increase the overcapacity. At $\delta=5$% the
+empirical service level already reaches 98.2% (based on 10,000 samples).</li>
+</ul>
+</aside></script></section><section data-markdown><script type="text/template">
 ## Sensitivity analysis
 
-TODO
-</script></section></section><section  data-markdown><script type="text/template">
+<img src="images/one_way_sensitivity.svg" />
+<!--- ![Schema](images/one_way_sensitivity.svg) --->
+
+<aside class="notes"><p>Here we vary individual parameters w.r.t. their baseline parameter levels.</p>
+<p>TODO</p>
+<p>There&#39;s also a two-way sensitivity plot (where we study the interaction of
+two parameter level changes at the same time), but that is nearly impossible to
+read from a slide. So for that thing you&#39;ll have to read my thesis :).</p>
+</aside></script></section></section><section  data-markdown><script type="text/template">
 # Conclusion
 
-TODO
-</script></section><section  data-markdown><script type="text/template">
+- Construct electrolysers on land, or on artificial islands
+- Existing gas platforms have no (serious) place in the green hydrogen production chain
+- At the national scale, robustness is cheap (+5% cost on average, for a service level around 98-99%)
+- Green hydrogen can be produced today at costs around €4-4.5/kg
+- Costs are sensitive to
+  - Capital costs
+  - Electrolyser efficiencies
+  - Wind capacity factors
+  
+  But these are all steadily improving!
+
+<aside class="notes"><p>TODO</p>
+</aside></script></section><section  data-markdown><script type="text/template">
 # Questions?
 </script></section></div>
     </div>
