--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -7,7 +7,7 @@
     <title>Planning green hydrogen production on the Dutch North Sea</title>
     <link rel="shortcut icon" href="./../favicon.ico"/>
     <link rel="stylesheet" href="./../dist/reveal.css" />
-    <link rel="stylesheet" href="./../dist/theme/white.css" id="theme" />
+    <link rel="stylesheet" href="./../dist/theme/black.css" id="theme" />
     <link rel="stylesheet" href="./../css/highlight/github.css" />
 
   </head>
@@ -88,7 +88,7 @@ or energy systems: as the levelised cost of electricity (LCoE).</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Deterministic solution
 
-<img width="120%" src="images/lcoh2.svg" />
+<img width="120%" src="images/lcoh2.svg" style="background-color:white;" />
 <!--- ![Schema](images/lcoh2.svg) --->
 
 Compare:
@@ -99,8 +99,11 @@ Compare:
 </aside></script></section><section data-markdown><script type="text/template">
 ## Recourse solution
 
-<img width="45%" src="images/stoch_lcoh2.svg" />
-<img width="45.3%" src="images/stoch_imports.svg" />
+<div style="height: 50vh;">
+    <img height="100%" src="images/stoch_lcoh2.svg" style="background-color:white;"/>
+    <img height="100%" src="images/stoch_imports.svg" style="background-color:white;"/>
+</div>
+
 
 <!--- ![Schema](images/stoch_lcoh2.svg) --->
 <!--- ![Schema](images/stoch_imports.svg) --->
@@ -115,10 +118,10 @@ Compare:
 
 - Robust solutions are rather cheap!
 
-<img src="images/10gw_reliability.svg" />
-<!--- ![Schema](images/10gw_reliability.svg) --->
+<img src="images/reliability.svg" style="background-color:white;" />
+<!--- ![Schema](images/reliability.svg) --->
 
-($\delta$: given a demand target $d \ge 0$, the model assumes demand $(1 + \delta)d$)
+($\delta$: percentage overcapacity in electricity generation relative to a demand target $d \ge 0$)
 
 <aside class="notes"><p>This is usually achieved via a (joint) chance constraint in the model formulation.
 That did not solve, so instead we built a little overcapacity using the regular,
@@ -136,7 +139,7 @@ empirical service level already reaches 98.2% (based on 10,000 samples).</li>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Sensitivity analysis
 
-<img src="images/one_way_sensitivity.svg" />
+<img src="images/one_way_sensitivity.svg" style="background-color:white;" />
 <!--- ![Schema](images/one_way_sensitivity.svg) --->
 
 Particularly important:
